@@ -224,6 +224,12 @@ daemon_fork = 1
 # that snmptt should change to when running in daemon mode.  Leave blank
 # to disable.  The user used should have read/write access to all log
 # files, the spool folder, and read access to the configuration files.
+# Only use this if you are starting snmptt as root.
+# A second (child) process will be started as the daemon_uid user so
+# there will be two snmptt processes running.  The first process will 
+# continue to run as the user that ran snmptt (root), waiting for the
+# child to quit.  After the child quits, the parent process will remove 
+# the snmptt.pid file  and exit. 
 daemon_uid = snmptt
 
 # Complete path of file to store process ID when running in daemon mode.
